--- a/example/requirements.txt
+++ b/example/requirements.txt
@@ -1,3 +1,7 @@
 Pillow
 django==1.8.3
-django-composite-field==0.1
+django-composite-field==0.3
+pytest
+pytest-django
+pytest-pep8
+pytest-factoryboy
