--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
-envlist = py27,py34
+envlist = py36,py37,py38
 
 [testenv]
 deps=
   -rexample/requirements.txt
   -e.
-commands=
-  py.test
+commands = pytest
+usedevelop = True
