--- a/pytest.ini
+++ b/pytest.ini
@@ -1,10 +1,4 @@
 [pytest]
 DJANGO_SETTINGS_MODULE=example.settings
 
-addopts = --nomigrations --durations=10
-
-;pep8maxlinelength = 90
-;pep8ignore =
-  ;migrations/* ALL
-  ;*tests/data/* ALL
-  ;E731
+addopts = --nomigrations --durations=10 --black --isort --cov-config .coveragerc
