--- a/example/requirements.txt
+++ b/example/requirements.txt
@@ -1,5 +1,4 @@
 Pillow
-django>=2.2,<3.0
 django-composite-field==1.1.0
 pytest
 pytest-django
@@ -7,4 +6,4 @@ pytest-factoryboy
 pytest-cov
 pytest-isort
 pytest-black
-black==20.8b1
+black>=21.7b0
