--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,9 @@
 [tox]
-envlist = py36,py37,py38,py39
+envlist =
+    py{36,37,38,39}-django22
+    py{36,37,38,39}-django30
+    py{36,37,38,39}-django31
+    py{36,37,38,39}-django32
 
 [gh-actions]
 python =
@@ -12,5 +16,9 @@ python =
 deps=
   -rexample/requirements.txt
   -e.
+  django22: Django>=2.2,<3.0
+  django30: Django>=3.0,<3.1
+  django31: Django>=3.1,<3.2
+  django32: Django>=3.2,<4
 commands = pytest
 usedevelop = True
